--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@iconify/react": "^4.1.1",
     "autoprefixer": "^10.4.16",
     "daisyui": "^3.9.4",
+    "moment": "^2.29.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "recharts": "^2.9.2",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
